--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "your-project-name",
+  "version": "1.0.0",
+  "description": "A brief description of your project.",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
@@ -6,5 +13,5 @@
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "pg": "^8.16.3"
+    }
   }
-}
